infrastructure/base/networking/wireguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wireguard
  namespace: wireguard
  labels:
    app: wireguard
spec:
  type: NodePort
  ports:
  - port: 51820
    targetPort: 51820
    nodePort: 30182
    protocol: UDP
    name: wireguard
  selector:
    app: wireguard
